[package]
name = "rawzeo"
description = "Decodes the raw data protocol of the Zeo headband."
version = "0.0.1"
edition = "2021"
rust-version = "1.66.1"
resolver = "2"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/joseluis/rawzeo"
documentation = "https://docs.rs/rawzeo"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE-*",
]
categories = ["api-bindings", "hardware-support", "encoding", "command-line-utilities"]
keywords = ["eeg", "brainwave", "headset", "neuroscience"]
publish = true

[dependencies]
circular-buffer = { version = "0.1.1", optional = true }
serialport = { version = "4.2.0", optional = true }

[features]
default = ["bin"]

bin = ["circular-buffer", "serialport"]

# std = []
# nightly = []

[[bin]]
name = "main"
path = "src/main.rs"
required-features= ["bin"]

[package.metadata.docs.rs]
# features = ["nightly"]

[badges]
maintenance = { status = "experimental" }
